百度站长验证

--- a/templates/default/common/head.html
+++ b/templates/default/common/head.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+	<meta name="baidu-site-verification" content="codeva-irCSP8JvXx" />
 	<title>电影先生</title>
 	<meta content="电影先生,dianyi.ng,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧" name="keywords">
 	<meta content="聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看。" name="description">
