优化标题和关键词

--- a/templates/default/about.html
+++ b/templates/default/about.html
@@ -14,11 +14,11 @@
 					<p>
 						<a><strong>DianYi.ng</strong></a><br>
 						<a><strong>Www.DianYi.ng</strong></a><br>
-						<a><strong>电影先生.Com</strong></a><br>
+						<a><strong>{{$.maccms.site.site_name}}.Com</strong></a><br>
 						<a><strong>DianYing.XianShe.ng</strong></a><br>
-						收藏本站网址，不迷路！</p><b>如果您认可电影先生，请分享给你的好友！</b>
+						收藏本站网址，不迷路！</p><b>如果您认可{{$.maccms.site.site_name}}，请分享给你的好友！</b>
 					<hr>
-					<h2>电影先生介绍</h2>
+					<h2>{{$.maccms.site.site_name}}介绍</h2>
 					<p>大片，高清正版免费在线观看！</p>
 					<h3>优势</h3>
 					<ul>
@@ -88,13 +88,13 @@
 						<li>安卓手机使用<b>
 							<a href="/help.html#and-kuake" target="_blank">夸克浏览器</a>、
 							<a href="/help.html#and-qq" target="_blank">QQ浏览器</a>、
-							<a href="/help.html#and-uc" target="_blank">UC浏览器</a></b>打开电影先生，均可<em>
+							<a href="/help.html#and-uc" target="_blank">UC浏览器</a></b>打开{{$.maccms.site.site_name}}，均可<em>
 							<a href="/help.html#and" target="_blank"><b>投屏</b></a></em>到电视播放！
 						</li>
 						<li>苹果手机使用<b>
 							<a href="/help.html#ios-safari" target="_blank">iPhone自带的Safari</a>、
 							<a href="/help.html#ios-qq" target="_blank">QQ浏览器</a>、
-							<a href="/help.html#ios-kuake" target="_blank">夸克浏览器</a></b>打开电影先生，均可<em>
+							<a href="/help.html#ios-kuake" target="_blank">夸克浏览器</a></b>打开{{$.maccms.site.site_name}}，均可<em>
 							<a href="/help.html#ios" target="_blank"><b>投屏</b></a></em>到电视播放！
 						</li>
 						<li>温馨提示：开启手机勿扰模式，效果更佳：）</li>
@@ -116,7 +116,7 @@
 							<i>- 翻翻有点烦</i>
 						</li>
 						<li>
-							<a href="javascript:" target="_blank">「电影先生」一个非常良心的影视网站，支持切换 9 个播放源</a>
+							<a href="javascript:" target="_blank">「{{$.maccms.site.site_name}}」一个非常良心的影视网站，支持切换 9 个播放源</a>
 							<i>- 博谈天下</i>
 						</li>
 					</ul>
