--- a/templates/default/common/footer.html
+++ b/templates/default/common/footer.html
@@ -42,7 +42,7 @@
 <div class="mxonefoot">
 	<a class="item" href="">
 		<i class="icon-home size20"></i>
-		<div class="grid-item-name" title="电影先生首页">首页</div>
+		<div class="grid-item-name" title="{{$.maccms.site.site_name}}首页">首页</div>
 	</a>
 	
 	<a class="item" href="v/dianying.html">
