--- a/templates/default/common/popup.html
+++ b/templates/default/common/popup.html
@@ -6,15 +6,15 @@
         </div>
         <div class="popup-main">
             <p>
-                哇！电影先生终于等到您啦！恭喜您开启了一个影视宝库！打今儿起，咱想看啥就看啥！让您不再错过任何一部优秀影片！</p>
+                哇！{{$.maccms.site.site_name}}终于等到您啦！恭喜您开启了一个影视宝库！打今儿起，咱想看啥就看啥！让您不再错过任何一部优秀影片！</p>
             <p class="popup-domain"><span>.NG 域名</span><strong><a href="index.html" target="_blank">DianYi<em>.ng</em></a></strong>
             </p>
             <p class="popup-domain"><span>.NG 域名</span><strong><a href="https://dianying.xianshe.ng" target="_blank">DY.XianShe<em>.ng</em></a></strong>
             </p>
             <p class="popup-domain"><span>.COM 域名</span><strong><a href="https://xn--44qz85a01qpc.com"
-                                                                     target="_blank">电影先生<em>.com</em></a></strong>
+                                                                     target="_blank">{{$.maccms.site.site_name}}<em>.com</em></a></strong>
             </p>
-            <p>将以上域名加入浏览器收藏夹，回家更方便。点此 <a class="close-pop" href="web.html" target="_blank"><strong>获取电影先生最新域名</strong></a>。
+            <p>将以上域名加入浏览器收藏夹，回家更方便。点此 <a class="close-pop" href="web.html" target="_blank"><strong>获取{{$.maccms.site.site_name}}最新域名</strong></a>。
             </p></div>
         <div class="popup-footer">
             <span class="popup-btn-o" onclick="closeclick()">我记住啦</span>
@@ -34,10 +34,10 @@
                 <h3 class="popup-title">官方域名列表</h3></div>
             <div class="popup-main">
                 <p>
-                <p>目前网络上出现了许多山寨电影先生的网站，以下是电影先生官方域名，请认准并保存，以防上当受骗。</p>
+                <p>目前网络上出现了许多山寨{{$.maccms.site.site_name}}的网站，以下是{{$.maccms.site.site_name}}官方域名，请认准并保存，以防上当受骗。</p>
                 <p>- <a><strong>DianYi.ng</strong></a><br>
                     - <a><strong>Www.DianYi.ng</strong></a><br>
-                    - <a><strong>电影先生.Com</strong></a><br>
+                    - <a><strong>{{$.maccms.site.site_name}}.Com</strong></a><br>
                     - <a><strong>DianYing.XianShe.ng</strong></a><br>
                 </p>
             </div>
