--- a/templates/default/dplayer.html
+++ b/templates/default/dplayer.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>电影先生 DianYi.ng</title>
+	<title>{{$.maccms.site.site_name}} DianYi.ng</title>
 	<meta content="text/html;charset=UTF-8" http-equiv="content-type">
 	<meta content="zh-CN" http-equiv="content-language">
 	<meta content="chrome=1" http-equiv="X-UA-Compatible">
