--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -4,7 +4,7 @@
 {{template "header" .}}
 <!-- 头部 -->
 <div class="app-text">
-	<a href="label/app.html"><i class="icon-download"></i>下载<strong>电影先生APP</strong>客户端</a>
+	<a href="label/app.html"><i class="icon-download"></i>下载<strong>{{$.maccms.site.site_name}}APP</strong>客户端</a>
 	<div class="bg-ball">
 	</div>
 </div>
