--- a/templates/default/label/app.html
+++ b/templates/default/label/app.html
@@ -6,7 +6,7 @@
 <main class="wrapper" id="main">
     <div class="content">
         <div>
-            <h1 class="page-title">电影先生APP</h1>
+            <h1 class="page-title">{{$.maccms.site.site_name}}APP</h1>
             <div class="box">
                 <div class="article-content">
                     <h2>APP介绍</h2>
@@ -21,7 +21,7 @@
                         <li><em><b>下载</b></em>：聚合全网下载，持续完善资源库</li>
                     </ul>
                     <h2 id="url">APP下载</h2>
-                    <p>下载提示：请收藏电影先生域名到浏览器，或添加至桌面图标。</p>
+                    <p>下载提示：请收藏{{$.maccms.site.site_name}}域名到浏览器，或添加至桌面图标。</p>
                     <p>
                         <a class="btn-important btn-large shadow-drop article-btn"
                            href="https://dianyi.ng/dianying.apk"><i class="icon-android"></i>安卓APP下载</a>
@@ -36,7 +36,7 @@
                         <img src="{{.__STATIC__}}/images/screenshot/7.png" width="280">
                     </p>
                     <hr>
-                    <h2>电影先生</h2>
+                    <h2>{{$.maccms.site.site_name}}</h2>
                     <ul>
                         <li>
                             <a href="/about.html" target="_blank">关于我们</a>
