--- a/templates/default/play.html
+++ b/templates/default/play.html
@@ -17,7 +17,7 @@
                                     <li class="swiper-slide"><span class="btn-main">提醒</span>不要轻易相信视频中的任何广告，谨防上当受骗</li>
                                     <li class="swiper-slide"><span class="btn-yellow">技巧</span>如遇视频无法播放或加载速度慢，可尝试切换播放节点或者切换解析</li>
                                     <li class="swiper-slide"><span class="btn-main">节点</span>请优先使用靠前节点，NG节点为海外独享</li>
-                                    <li class="swiper-slide"><span class="btn-yellow">收藏</span>电影先生网址：<strong>dianyi.ng&nbsp; /&nbsp; www.dianyi.ng&nbsp; ,记得收藏哟～</strong></li>
+                                    <li class="swiper-slide"><span class="btn-yellow">收藏</span>{{$.maccms.site.site_name}}网址：<strong>dianyi.ng&nbsp; /&nbsp; www.dianyi.ng&nbsp; ,记得收藏哟～</strong></li>
                                 </div>
 							</div>
                         </ul>
@@ -129,7 +129,7 @@
                         </div>
                         <a href="/voddown/3fkSCS.html#download-list" class="btn-block-o handle-btn handle-down" title="《{{ .PageData.detail.VodName }}》可免费下载"><i class="icon-download-bold"></i><em class="extra-tips">免费</em><p class="block-name">可下载</p></a>
                         <div class="video-player-handle-more">
-                            <div class="btn-block-o handle-btn handle-share share-btn" title="分享《{{ .PageData.detail.VodName }}》给朋友一起看" data-clipboard-text="dianyi.ng/show.html 我正在电影先生观看《{{ .PageData.detail.VodName }}》，推荐给你一起看！"><i class="icon-share"></i>
+                            <div class="btn-block-o handle-btn handle-share share-btn" title="分享《{{ .PageData.detail.VodName }}》给朋友一起看" data-clipboard-text="dianyi.ng/show.html 我正在{{$.maccms.site.site_name}}观看《{{ .PageData.detail.VodName }}》，推荐给你一起看！"><i class="icon-share"></i>
                                 <p class="block-name">分享</p>
                             </div>
                             <div class="drop"><span class="btn-block-o handle-btn handle-more"><i class="icon-more"></i>
