--- a/templates/default/prestrain.html
+++ b/templates/default/prestrain.html
@@ -133,7 +133,7 @@
 			<img src="{{ .__STATIC__ }}/image/play-logo.png">
 		</div>
 		<div class="loading"></div>
-		<div class="tips">如果你觉得电影先生不错，记得把 dianyi.ng 推荐给朋友们</div>
+		<div class="tips">如果你觉得{{$.maccms.site.site_name}}不错，记得把 dianyi.ng 推荐给朋友们</div>
 	</div>
 </div>
 
