--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -30,7 +30,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/label/top.html" class="search-btn search-cupfox" id="search-cupfox" title="电影先生排行榜" target="_blank"><i class="icon-cupfox"></i><span>搜全网</span></a>
+                        <a href="/label/top.html" class="search-btn search-cupfox" id="search-cupfox" title="{{$.maccms.site.site_name}}排行榜" target="_blank"><i class="icon-cupfox"></i><span>搜全网</span></a>
                         <button class="search-btn search-go" type="submit"><i class="icon-search"></i></button>
                         <button class="cancel-btn" type="button">取消</button>
                     </div>
