--- a/templates/default/web.html
+++ b/templates/default/web.html
@@ -6,23 +6,23 @@
 <main id="main" class="wrapper">
     <div class="content">
         <div>
-            <h1 class="page-title">电影先生最新地址</h1>
+            <h1 class="page-title">{{$.maccms.site.site_name}}最新地址</h1>
             <div class="box">
                 <div class="article-content">
                     <h2 id="domain"><a href="#domain">域名列表</a></h2>
                     <p>
                         <a href="http://DianYi.ng" target="_blank">https://DianYi.ng</a>&nbsp;<span speed="http://DianYi.ng/">测速中</span><br />
                         <a href="http://Www.DianYi.ng" target="_blank">https://Www.DianYi.ng</a>&nbsp;<span speed="http://Www.DianYi.ng/">测速中</span><br />
-                        <a href="http://电影先生.Com" target="_blank">https://电影先生.Com</a>&nbsp;<span speed="http://电影先生.Com/">测速中</span><br />
+                        <a href="http://{{$.maccms.site.site_name}}.Com" target="_blank">https://{{$.maccms.site.site_name}}.Com</a>&nbsp;<span speed="http://{{$.maccms.site.site_name}}.Com/">测速中</span><br />
                         <a href="http://DianYing.XianShe.ng" target="_blank">https://DianYing.XianShe.ng</a>&nbsp;<span speed="http://DianYing.XianShe.ng/">测速中</span><br />
-                        <b>如果您认可电影先生，请分享给你的好友！</b>
+                        <b>如果您认可{{$.maccms.site.site_name}}，请分享给你的好友！</b>
                     </p>
                     <p>
-                        <a href="label/app.html" class="btn-main btn-large shadow-drop article-btn">电影先生APP下载</a><br />
+                        <a href="label/app.html" class="btn-main btn-large shadow-drop article-btn">{{$.maccms.site.site_name}}APP下载</a><br />
                         如果域名被封无法访问，可通过App打开、查看最新网址..<br />
                     </p>
                     <hr />
-                    <h2>电影先生</h2>
+                    <h2>{{$.maccms.site.site_name}}</h2>
                     <ul>
                         <li>
                             <em><b>防封</b></em
