--- a/templates/default/404.html
+++ b/templates/default/404.html
@@ -7,8 +7,8 @@
 	<meta content="webkit|ie-comp|ie-stand" name="renderer">
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
 	<title>糟糕！影片不在这个页面</title>
-	<meta content="电影先生,dianyi.ng,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧" name="keywords">
-	<meta content="聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看。" name="description">
+	<meta content="{{$.maccms.site.site_keywords}}" name="keywords">
+	<meta content="{{$.maccms.site.site_description}}" name="description">
 	<link href="{{.__STATIC__}}/picture/logo.png" rel="icon" type="image/png">
 	<link href="{{.__CSS__}}/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -23,7 +23,7 @@
 					<div class="nfmsg-content">
 						可以尝试使用搜索功能，也许能找到这部影片～
 						<p>
-							<a class="btn-aux btn-base" href="/search.html">去找找</a><a class="btn-gray btn-base" href="/">返回电影先生</a>
+							<a class="btn-aux btn-base" href="/search.html">去找找</a><a class="btn-gray btn-base" href="/">返回{{$.maccms.site.site_name}}</a>
 						</p>
 					</div>
 				</div>
