--- a/templates/default/common/head.html
+++ b/templates/default/common/head.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-	<title>{{.maccms.site.site_name}}</title>
-	<meta content="电影先生,dianyi.ng,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧" name="keywords">
-	<meta content="聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看。" name="description">
+	<title>{{$.maccms.site.site_name}}</title>
+	<meta content="{{.maccms.site.site_keywords}}" name="keywords">
+	<meta content="{{.maccms.site.site_description}}" name="description">
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
 	<meta content="always" name="referrer">
