--- a/templates/default/404.html
+++ b/templates/default/404.html
@@ -19,7 +19,9 @@
 			<div class="box nfmsg-box">
 				<div class="nfmsg-left"></div>
 				<div class="nfmsg-right">
-					<div class="nfmsg-title">糟糕！影片不在这个页面</div>
+					<div class="nfmsg-title">
+						糟糕！影片不在这个页面
+					</div>
 					<div class="nfmsg-content">
 						可以尝试使用搜索功能，也许能找到这部影片～
 						<p>
